solc_ossfuzz_seed_corpus/test_solidity/test_29389f67084f11662945e4cd6987e90c05231cddb4d6b590f449271cd129dcdf_fe89008d501aba93402b0fec913153fe4acfe2e5_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
function f0()      returns(int40 o0){
  if (true)
  {
    o0 += ((int40(549755813887) + int40(549755813887)) % int40(549755813887));
  }
  else
  {
    if (false)
    {
      function () external   l0;
      try l0()
      {
        return (((((int16(0) ^ int16(-21219)) | int24(-7598914)) ^ int24(8388607)) * int24(8388607)));
      }
      catch
      {
        o0 += (int40(451446170042) % hex"ffffffffffffffffffffffffffffffffffffffffffffffffffff" f1 /*suffix expr*/);
      }
    }
    else
    {
      if (true)
      {
        o0 %= ((int40(((int40(0) | int40(178580959081)) / int40(399856385889))) & int40(139256989428)) % int40(0));
      }
      while (false)
      {
        (o0) = (int40(0));
        assert(o0 == int40(0));
        bytes2 l1 = bytes2(0x6a29);
      }
    }
    while ((address(0x0000000000000000000000000000000000000007) == address(0x0000000000000000000000000000000000000006)))
    {
      if (((bytes30(0x000000000000000000000000000000000000000000000000000000000000) | bytes30(0xb8fceab7bfe9c40a8b19dadfb49ed48e2bd10117088ac410587a414b4837)) == ((bytes19(0x10316ec5bd35807a5e854d131ecb285a7c6d5c) == bytes19(0xf37c05e3fc2add97ea36bfb8cb3a22a4d6c7f0)) ? bytes30(0x000000000000000000000000000000000000000000000000000000000000) : bytes30(0x000000000000000000000000000000000000000000000000000000000000))))
      {
        break;
      }
      delete o0;
    }
    return (int40(0));
  }
}
function f2()     {
}
function f1(bytes26 i0) pure suffix  returns(int40 o0)
{
  (o0) = ((f0() * int32(2147483647)));
  assert(o0 == (f0() * int32(2147483647)));
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  address el0;
  bytes22 el1;
}
contract C0 {
  event ev0();
  struct St1 {
    int48 el0;
  }
  uint56  public s0;
  bool   s1;
  address  public s2 = address(this);
  uint152   s3;
  constructor(uint56 i0,bool i1,uint152 i2)   {
    s0 += ((((uint32(4294967295) & uint32(2995511458)) * uint40(0)) | uint40(0)) ** uint112(uint112(0)));
    s1 = hex"000000000000000000000000000000000000000000000000" f3 /*suffix expr*/;
    s3 *= (uint152(int152(2854495385411919762116571938898990272765493247)) ^ uint152((uint152(5708990770823839524233143877797980545530986495) / (uint152(1006610126517799365639765104292490436611082919) | uint152(5708990770823839524233143877797980545530986495)))));
    unchecked {
    }
  }
}
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19
}
function f4(int256 i0)    pure suffix returns(uint32 o0){
  do
  {
    o0 ^= 0x46097C8C3fe98BE607D61c82Df0a8c102119d737 f5 /*suffix expr*/;
    continue;
  }
  while ((bytes10(0x00000000000000000000) == (((bytes4(0x00000000) & bytes4(0x068d7ba4)) & bytes4(0xffffffff)) & bytes10(0x00000000000000000000))));
}
import "su0.sol";
function f3(bytes24 i0) pure suffix  returns(bool o0)
{
  o0 = false;
  assert(o0 == false);
}
function f5(address i0) pure suffix  returns(uint32 o0)
{
}
// ----
// Warning 3149: (su1.sol:281-373): The result type of the exponentiation operation is equal to the type of the first operand (uint40) ignoring the (larger) type of the second operand (uint112) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 2072: (su0.sol:770-779): Unused local variable.
// Warning 5667: (su0.sol:1475-1485): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:236-245): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:246-253): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:254-264): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:871-880): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:1198-1208): Unused function parameter. Remove or comment out the variable name to silence this warning.
// TypeError 8961: (su0.sol:1531-1535): Function cannot be declared as pure because this expression (potentially) modifies the state.
// TypeError 8961: (su0.sol:1575-1579): Function cannot be declared as pure because this expression (potentially) modifies the state.
